--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<!--
-writing:
-* jRPG to TTRPG metaphor
-
-design:
-* sprites for health bars, etc.
-* graphic showing swatch under D65 and D50 light on either side
--->
-
 <!doctype html>
 <html lang="en">
 
@@ -69,7 +60,7 @@ design:
         <p>In 2015, the internet argued nonstop about “<strong>the dress</strong>.” Some people saw white and gold, others swore it was blue and black. Both were right in a way—the photo was ambiguous, and our brains made different guesses about the lighting. It was a viral reminder that color lives in the eye of the beholder.</p>
         <div class="grid">
           <div class="image-container">
-            <img src="images/thedress.jpg" width="100%" height="auto" alt="Image of 'the dress'">
+            <img src="images/thedress.png" width="100%" height="auto" alt="Image of 'the dress'">
           </div>
           <div class="callout">
             <p><em>Why this matters:</em> If color can shift depending on light, surroundings, and even who’s looking, then converting from one system (like screens) to another (like print) is never straightforward. That’s why we need all the steps you’re about to see. 
@@ -568,7 +559,7 @@ design:
       </section>
 
       <section>
-        <h2>Lab → CMYK: the final dungeon boss</h2>
+        <h2>Lab → CMYK: the final boss of the color world</h2>
 
         <p>There’s no single “correct” CMYK formula hiding in a dusty tome. The numbers depend entirely on the printing press’s <strong>ICC profile</strong>, which knows that machine’s exact pigment behavior, limits, and tricks for mixing colors. The profile decides:</p>
         <ul>
@@ -683,7 +674,7 @@ design:
               <tr>
                 <td>Naïve math</td>
                 <td>
-                  <div class="swatch" style="background: rgb(98, 156, 103);"></div>
+                  <div class="swatch" style="background: #6c927f;"></div>
                 </td>
                 <td>37.18</td>
                 <td>0.0</td>
