--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>How to convert sRGB hex → CMYK</title>
+  <title>RGB → CMYK: Practical Guide to Color Conversion for Designers</title>
+  <meta name="description" content="Convert RGB/hex to CMYK using ICC profiles with accurate rendering intents and an interactive LittleCMS (WASM) sandbox.">
+  <meta name="keywords" content="RGB to CMYK, hex to CMYK, sRGB to CMYK, ICC profiles, US Web Coated SWOP v2, FOGRA39, GRACoL, LittleCMS, rendering intents, relative colorimetric, perceptual, CIELAB, XYZ, soft proofing, GCR, UCR, total ink limit, Pantone to CMYK, print production, color management">
+  <link rel="canonical" href="https://cydrysdale.github.io/rgb-to-cmyk-guide/">
+  <meta name="robots" content="index,follow">
+  <meta name="author" content="Chris Yasuda Drydsale">
+  <meta name="format-detection" content="telephone=no"/>
+  <!-- Open Graph for Facebook, LinkedIn, etc. -->
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="RGB → CMYK: Practical Guide to Color Conversion for Designers">
+  <meta property="og:description" content="Convert RGB/hex to CMYK using ICC profiles with accurate rendering intents and an interactive LittleCMS (WASM) sandbox.">
+  <meta property="og:image" content="https://cydrysdale.github.io/rgb-to-cmyk-guide/images/rgb-to-cmyk-guide.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://cydrysdale.github.io/rgb-to-cmyk-guide/">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
