--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header>
     <div class="header-inner">
       <div class="title-block">
-        <h1>How to convert sRGB hex → CMYK</h1>
+        <h1>RGB → CMYK: Patch Notes for Real-World Color</h1>
         <div class="sub">Practical math to satisfy your inner-production designer</div>
       </div>
 
