--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>RGB → CMYK: Practical Guide to Color Conversion for Designers</title>
-  <meta name="description" content="Convert RGB/hex to CMYK using ICC profiles with accurate rendering intents and an interactive LittleCMS (WASM) sandbox.">
+  <meta name="description" content="Follow your colors from screen to print in a step-by-step guide explaining how RGB to CMYK color conversion works.">
   <meta name="keywords" content="RGB to CMYK, hex to CMYK, sRGB to CMYK, ICC profiles, US Web Coated SWOP v2, FOGRA39, GRACoL, LittleCMS, rendering intents, relative colorimetric, perceptual, CIELAB, XYZ, soft proofing, GCR, UCR, total ink limit, Pantone to CMYK, print production, color management">
   <link rel="canonical" href="https://cydrysdale.github.io/rgb-to-cmyk-guide/">
   <meta name="robots" content="index,follow">
@@ -13,7 +13,7 @@
   <!-- Open Graph for Facebook, LinkedIn, etc. -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="RGB → CMYK: Practical Guide to Color Conversion for Designers">
-  <meta property="og:description" content="Convert RGB/hex to CMYK using ICC profiles with accurate rendering intents and an interactive LittleCMS (WASM) sandbox.">
+  <meta property="og:description" content="Follow your colors from screen to print in a step-by-step guide explaining how RGB to CMYK color conversion works.">
   <meta property="og:image" content="https://cydrysdale.github.io/rgb-to-cmyk-guide/images/rgb-to-cmyk-guide.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -30,7 +30,7 @@
   <header>
     <div class="header-inner">
       <div class="title-block">
-        <h1>RGB → CMYK: Patch Notes for Real-World Color</h1>
+        <h1>From Pixels to Paper: An RGB → CMYK Adventure</h1>
         <div class="sub">Practical math to satisfy your inner-production designer</div>
       </div>
 
