--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>RGB → CMYK: Practical Guide to Color Conversion for Designers</title>
+  <title>From Pixels to Paper: An RGB → CMYK Adventure</title>
   <meta name="description" content="Follow your colors from screen to print in a step-by-step guide explaining how RGB to CMYK color conversion works.">
   <meta name="keywords" content="RGB to CMYK, hex to CMYK, sRGB to CMYK, ICC profiles, US Web Coated SWOP v2, FOGRA39, GRACoL, LittleCMS, rendering intents, relative colorimetric, perceptual, CIELAB, XYZ, soft proofing, GCR, UCR, total ink limit, Pantone to CMYK, print production, color management">
   <link rel="canonical" href="https://cydrysdale.github.io/rgb-to-cmyk-guide/">
@@ -12,7 +12,7 @@
   <meta name="format-detection" content="telephone=no"/>
   <!-- Open Graph for Facebook, LinkedIn, etc. -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="RGB → CMYK: Practical Guide to Color Conversion for Designers">
+  <meta property="og:title" content="From Pixels to Paper: An RGB → CMYK Guide">
   <meta property="og:description" content="Follow your colors from screen to print in a step-by-step guide explaining how RGB to CMYK color conversion works.">
   <meta property="og:image" content="https://cydrysdale.github.io/rgb-to-cmyk-guide/images/rgb-to-cmyk-guide.png" />
   <meta property="og:image:width" content="1200" />
