--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
           <div>
             <figure dir="rtl">
               <p class="image-compare" role="img" tabindex="0" aria-label="Interactive comparison of additive RGB and subtractive CMYK color mixing." aria-description="Two overlaid images are revealed by a slider or toggle. The RGB version (additive light) shows red, green, and blue mixing to white at the center on a dark background. The CMYK version (subtractive ink) shows cyan, magenta, and yellow mixing to black at the center on a light background.">
-                <span class="image-container">
+                <span>
                   <img src="images/RGB-color-mix.png" alt="" aria-hidden="true">
+                  </span>
                   <img src="images/CMYK-color-mix.png" alt="" aria-hidden="true">
-                </span>
               </p>
             </figure>
           </div>
