--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   </script>
   <meta charset="utf-8" />
   <title>From Pixels to Paper: An RGB → CMYK Adventure</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="manifest" href="/site.webmanifest">
   <meta name="description" content="Follow your colors from screen to print in a step-by-step guide explaining how RGB to CMYK color conversion works.">
   <meta name="keywords" content="RGB to CMYK, hex to CMYK, sRGB to CMYK, ICC profiles, US Web Coated SWOP v2, FOGRA39, GRACoL, LittleCMS, rendering intents, relative colorimetric, perceptual, CIELAB, XYZ, soft proofing, GCR, UCR, total ink limit, Pantone to CMYK, print production, color management">
   <link rel="canonical" href="https://cydrysdale.github.io/rgb-to-cmyk-guide/">
@@ -70,6 +75,9 @@
             <h3>Color is contextual</h3>
             <p>
               The same light mix can look totally different depending on what’s around it. Take <strong>orange vs. brown</strong>—they can be the exact same wavelengths. Give it a dark background or put it next to vivid colors, and it feels orange. With a light background or set against pale tones, and suddenly it’s brown. Context is everything.
+            </p>
+            <p>
+              Try the toggle. Same swatch, or did it swap in a different color?
             </p>
           </div>          
           <div class="toggle-container">
