--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <a class="skip-link" href="#content">Skip to content</a>
   <header>
     <div class="header-inner">
+      <img src="images/apple-touch-icon.png" width="60px" style="display: inline-block; margin-right: 10px;" />
       <div class="title-block">
         <h1>From Pixels to Paper: An RGB → CMYK Adventure</h1>
         <div class="sub">Practical math to satisfy your inner-production designer</div>
@@ -875,6 +876,8 @@
       
     </main>
   </div>
+  <button id="tocFab" class="toc-fab" aria-controls="tocList" aria-expanded="false" aria-label="Open table of contents">☰ Inventory</button>
+
 </body>
 
 </html>
