--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header>
     <div class="header-inner">
       <img src="images/apple-touch-icon.png" width="60px" style="display: inline-block; margin-right: 10px;" />
-      <div class="title-block">
+      <div id="top" class="title-block">
         <h1>From Pixels to Paper: An RGB → CMYK Adventure</h1>
         <div class="sub">Practical math to satisfy your inner-production designer</div>
       </div>
@@ -877,6 +877,7 @@
     </main>
   </div>
   <button id="tocFab" class="toc-fab" aria-controls="tocList" aria-expanded="false" aria-label="Open table of contents">☰ Inventory</button>
+  <a id="toTop" href="#top" title="Back to top">&#8593;</a>
 
 </body>
 
